<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".product">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/TVzagolovka"
        android:textColor="#111112"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="200dp"
        android:text="@string/TVmersedes_benz"
        android:textColor="#111112"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mers"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:src="@drawable/mers"
        app:layout_constraintEnd_toStartOf="@+id/bmw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="200dp"
        android:text="@string/TVbmw"
        android:textColor="#111112"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv3"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bmw"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:src="@drawable/bmw"
        app:layout_constraintEnd_toStartOf="@+id/lada"
        app:layout_constraintStart_toEndOf="@+id/mers"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="200dp"
        android:text="@string/TVlada"
        android:textColor="#111112"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lada"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:src="@drawable/lada"
        app:layout_constraintStart_toEndOf="@+id/bmw"
        app:layout_constraintTop_toBottomOf="@+id/tv3" />

</androidx.constraintlayout.widget.ConstraintLayout>